# WebFunctions

./: LICENSE  README.md  pyproject.toml
src/WebFunctions/: parser.py
