[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "WebFunctions"
version = "0.0.1"
authors = [
  { name="Chinmay M", email="chinmay.malvania@gmail.com"},
  { name="Ribhav S",email="ribhavksil@gmail.com"}
]
description = ""
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/chinmaym505/WebFuncions/"
"Bug Tracker" = "https://github.com/chinmaym505/WebFuncions/issues"
